--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Common</string>
+    <string name="send">发送验证码</string>
+    <string name="resend">重新获取验证码</string>
+    <string name="waiting_msg">发送验证码(%s)</string>
 </resources>
